# dpdk

./: .editorconfig  .gitignore  .travis.yml  MAINTAINERS  README  VERSION  meson.build  meson_options.txt
app/test-crypto-perf/: Makefile  cperf_ops.c  cperf_options.h  cperf_options_parsing.c  cperf_test_common.c  cperf_test_latency.c  cperf_test_pmd_cyclecount.c  cperf_test_throughput.c  cperf_test_vector_parsing.c  cperf_test_vectors.c  cperf_test_vectors.h  cperf_test_verify.c  main.c  meson.build
app/test-flow-perf/: Makefile  actions_gen.c  actions_gen.h  flow_gen.c  flow_gen.h  items_gen.c  items_gen.h  main.c  meson.build  user_parameters.h
app/test-pipeline/: Makefile  init.c  meson.build
drivers/baseband/: Makefile  meson.build
drivers/baseband/fpga_5gnr_fec/: Makefile  fpga_5gnr_fec.c  fpga_5gnr_fec.h  meson.build
drivers/baseband/fpga_lte_fec/: Makefile  fpga_lte_fec.c  rte_pmd_bbdev_fpga_lte_fec_version.map
drivers/baseband/null/: bbdev_null.c  rte_pmd_bbdev_null_version.map
drivers/baseband/turbo_sw/: bbdev_turbo_software.c
drivers/bus/: meson.build
drivers/bus/dpaa/: dpaa_bus.c  rte_bus_dpaa_version.map  rte_dpaa_bus.h
drivers/bus/fslmc/: fslmc_bus.c  fslmc_vfio.c  fslmc_vfio.h  rte_bus_fslmc_version.map
drivers/bus/ifpga/: ifpga_bus.c  rte_bus_ifpga.h  rte_bus_ifpga_version.map
drivers/bus/pci/: pci_common.c  pci_params.c  private.h  rte_bus_pci.h  rte_bus_pci_version.map
drivers/bus/vdev/: rte_bus_vdev.h  rte_bus_vdev_version.map  vdev.c
drivers/bus/vmbus/: rte_bus_vmbus_version.map  vmbus_channel.c  vmbus_common.c
drivers/compress/: meson.build
drivers/compress/isal/: isal_compress_pmd.c
drivers/compress/octeontx/: otx_zip_pmd.c
drivers/compress/qat/: qat_comp.c  qat_comp.h  qat_comp_pmd.c  rte_pmd_qat_version.map
drivers/compress/zlib/: zlib_pmd.c
drivers/crypto/: Makefile  meson.build
drivers/crypto/aesni_gcm/: Makefile  aesni_gcm_ops.h  aesni_gcm_pmd.c  aesni_gcm_pmd_ops.c  aesni_gcm_pmd_private.h
drivers/crypto/aesni_mb/: Makefile  aesni_mb_pmd_private.h  rte_aesni_mb_pmd.c  rte_aesni_mb_pmd_ops.c  rte_aesni_mb_pmd_private.h
drivers/crypto/armv8/: meson.build  rte_pmd_armv8_version.map
drivers/crypto/caam_jr/: Makefile  caam_jr.c  caam_jr_hw_specific.h  caam_jr_pvt.h  caam_jr_uio.c  meson.build
drivers/crypto/ccp/: Makefile  ccp_crypto.c  ccp_dev.c  ccp_pci.h  ccp_pmd_ops.c  meson.build  rte_ccp_pmd.c
drivers/crypto/dpaa2_sec/: Makefile  dpaa2_sec_dpseci.c  dpaa2_sec_event.h  dpaa2_sec_priv.h  meson.build  rte_pmd_dpaa2_sec_version.map
drivers/crypto/dpaa_sec/: Makefile  dpaa_sec.c  dpaa_sec.h  meson.build  rte_pmd_dpaa_sec_version.map
drivers/crypto/kasumi/: Makefile  meson.build  rte_kasumi_pmd.c  rte_pmd_kasumi_version.map
drivers/crypto/mvsam/: Makefile  meson.build  rte_mrvl_pmd.c  rte_mrvl_pmd_ops.c
drivers/crypto/nitrox/: Makefile  meson.build  nitrox_csr.h  nitrox_device.c  nitrox_device.h  nitrox_hal.c  nitrox_logs.h  nitrox_qp.c  nitrox_qp.h  nitrox_sym.c  nitrox_sym_capabilities.c  nitrox_sym_ctx.h  nitrox_sym_reqmgr.c  rte_pmd_nitrox_version.map
drivers/crypto/null/: Makefile  meson.build  null_crypto_pmd.c  rte_pmd_null_crypto_version.map
drivers/crypto/octeontx/: otx_cryptodev.c  otx_cryptodev_hw_access.c  otx_cryptodev_ops.c
drivers/crypto/octeontx2/: Makefile  meson.build  otx2_cryptodev.c  otx2_cryptodev.h  otx2_cryptodev_hw_access.c  otx2_cryptodev_hw_access.h  otx2_cryptodev_mbox.c  otx2_cryptodev_ops.c  otx2_cryptodev_qp.h  otx2_ipsec_fp.h  otx2_security.c  otx2_security.h  otx2_security_tx.h
drivers/crypto/openssl/: rte_openssl_pmd.c  rte_openssl_pmd_ops.c
drivers/crypto/qat/: meson.build  qat_asym.c  (+6 more)
drivers/event/: meson.build
drivers/mempool/: meson.build
drivers/raw/: Makefile  meson.build
examples/ioat/: ioatfwd.c  meson.build
examples/l2fwd-event/: Makefile  l2fwd_common.c  l2fwd_common.h  l2fwd_event.c  l2fwd_event.h  l2fwd_event_generic.c  l2fwd_event_internal_port.c  l2fwd_eventdev.c  l2fwd_eventdev.h  l2fwd_eventdev_generic.c  l2fwd_eventdev_internal_port.c  l2fwd_poll.c  l2fwd_poll.h  l2fwd_worker.c  l2fwd_worker.h  main.c  meson.build
kernel/linux/: Makefile  meson.build
lib/librte_cryptodev/: Makefile  cryptodev_trace_points.c  meson.build  rte_crypto_asym.h  rte_crypto_sym.h  rte_cryptodev.c  rte_cryptodev.h  rte_cryptodev_pmd.h  rte_cryptodev_trace.h  rte_cryptodev_trace_fp.h  rte_cryptodev_version.map  rte_trace_cryptodev.h  rte_trace_cryptodev_fp.h
lib/librte_eal/: meson.build  rte_eal_exports.def  rte_eal_version.map
lib/librte_fib/: Makefile  dir24_8.c  dir24_8_avx512.h  meson.build  rte_fib.c  rte_fib.h  rte_fib6.c  rte_fib6.h  trie.c  trie_avx512.h
lib/librte_hash/: Makefile  k32v64_hash.c  k32v64_hash.h  k32v64_hash_avx512vl.c  meson.build  rte_cuckoo_hash.c  rte_cuckoo_hash.h  rte_dwk_hash.c  rte_dwk_hash.h  rte_fbk_hash.c  rte_hash.h  rte_hash_version.map  rte_jhash.h  rte_k32v64_hash.c  rte_k32v64_hash.h  rte_kv_hash.c  rte_kv_hash.h
lib/librte_mempool/: Makefile  mempool_trace_points.c  meson.build  rte_mempool.c  rte_mempool.h  rte_mempool_ops.c  rte_mempool_ops_default.c  rte_mempool_trace.h  rte_mempool_trace_fp.h  rte_mempool_version.map  rte_trace_mempool.h  rte_trace_mempool_fp.h
lib/librte_ring/: Makefile  meson.build  rte_ring.c  rte_ring.h  rte_ring_32.c  rte_ring_32.h  rte_ring_c11_mem.h  rte_ring_elem.h  rte_ring_generic.h  rte_ring_hts.h  rte_ring_hts_c11_mem.h  rte_ring_hts_elem.h  rte_ring_hts_generic.h  rte_ring_peek.h  rte_ring_rts.h  rte_ring_rts_c11_mem.h  rte_ring_rts_elem.h  rte_ring_rts_generic.h  rte_ring_template.c  rte_ring_template.h  rte_ring_version.map
lib/librte_telemetry/: Makefile  meson.build  rte_telemetry.c  rte_telemetry.h  rte_telemetry_json.h  rte_telemetry_legacy.h  rte_telemetry_parser.c  rte_telemetry_parser.h  rte_telemetry_version.map  telemetry.c  telemetry_legacy.c
lib/librte_vhost/: Makefile  iotlb.c  meson.build  rte_vdpa.h  rte_vhost.h  rte_vhost_crypto.h  rte_vhost_version.map  socket.c  vdpa.c  vhost.c  vhost.h  vhost_crypto.c  vhost_user.c  vhost_user.h  virtio_net.c
(+2041 files in other folders)
