# Please keep these options sorted alphabetically.

option('allow_invalid_socket_id', type: 'boolean', value: false,
	description: 'allow out-of-range NUMA socket id\'s for platforms that don\'t report the value correctly')
option('apps', type: 'string', value: 'all',
	description: 'List of applications to build. Defaults to all')
option('drivers_baseband', type: 'string', value: 'all',
	description: 'List of baseband drivers to build. Defaults to all')
option('drivers_bus', type: 'string', value: 'all',
	description: 'List of bus drivers to build. Defaults to all')
option('drivers_common', type: 'string', value: 'all',
	description: 'List of common drivers to build. Defaults to all')
option('drivers_compress', type: 'string', value: 'all',
	description: 'List of compress drivers to build. Defaults to all')
option('drivers_crypto', type: 'string', value: 'all',
	description: 'List of crypto drivers to build. Defaults to all')
option('drivers_event', type: 'string', value: 'all',
	description: 'List of event drivers to build. Defaults to all')
option('drivers_mempool', type: 'string', value: 'all',
	description: 'List of mempool drivers to build. Defaults to all')
option('drivers_net', type: 'string', value: 'all',
	description: 'List of net drivers to build. Defaults to all')
option('drivers_raw', type: 'string', value: 'all',
	description: 'List of rawdev drivers to build. Defaults to all')
option('drivers_install_subdir', type: 'string', value: 'dpdk/pmds-<VERSION>',
	description: 'Subdirectory of libdir where to install PMDs. Defaults to using a versioned subdirectory.')
option('enable_docs', type: 'boolean', value: false,
	description: 'build documentation')
option('enable_kmods', type: 'boolean', value: true,
	description: 'build kernel modules')
option('examples', type: 'string', value: '',
	description: 'Comma-separated list of examples to build by default')
option('ibverbs_link', type: 'combo', choices : ['shared', 'dlopen'], value: 'shared',
	description: 'Linkage method (shared/dlopen) for Mellanox PMDs with ibverbs dependencies.')
option('include_subdir_arch', type: 'string', value: '',
	description: 'subdirectory where to install arch-dependent headers')
option('kernel_dir', type: 'string', value: '',
	description: 'path to the kernel for building kernel modules, they will be installed in $DEST_DIR/$kernel_dir/../extra/dpdk')
option('libs', type: 'string', value: 'all',
	description: 'List of libraries to build. Defaults to all')
option('lib_musdk_dir', type: 'string', value: '',
	description: 'path to the MUSDK library installation directory')
option('machine', type: 'string', value: 'native',
	description: 'set the target machine type')
option('max_ethports', type: 'integer', value: 32,
	description: 'maximum number of Ethernet devices')
option('max_lcores', type: 'integer', value: 128,
	description: 'maximum number of cores/threads supported by EAL')
option('max_numa_nodes', type: 'integer', value: 4,
	description: 'maximum number of NUMA nodes supported by EAL')
option('per_library_versions', type: 'boolean', value: true,
	description: 'true: each lib gets its own version number, false: DPDK version used for each lib')
option('tests', type: 'boolean', value: true,
	description: 'build unit tests')
option('use_hpet', type: 'boolean', value: false,
	description: 'use HPET timer in EAL')
