# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2019 Intel Corporation

allow_experimental_apis = true
sources = files(
	'config.c',
	'init.c',
	'main.c',
	'pipeline_acl.c',
	'pipeline_hash.c',
	'pipeline_lpm.c',
	'pipeline_lpm_ipv6.c',
	'pipeline_stub.c',
	'runtime.c')
deps += ['pipeline', 'pci']
