# SPDX-License-Identifier: BSD-3-Clause
# Copyright(C) 2019 Marvell International Ltd.
#

# meson file, for building this example as part of a main DPDK build.
#
# To build this example as a standalone application with an already-installed
# DPDK instance, use 'make'

sources = files(
	'main.c',
	'l2fwd_eventdev.c',
	'l2fwd_eventdev_internal_port.c',
	'l2fwd_eventdev_generic.c'
)
