# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

version = 2
sources = files('rte_ring.c',
		'rte_ring_32.c')
headers = files('rte_ring.h',
		'rte_ring_32.h',
		'rte_ring_c11_mem.h',
		'rte_ring_generic.h',
		'rte_ring_template.h',
		'rte_ring_template.c')

# rte_ring_create_elem and rte_ring_get_memsize_elem are experimental
allow_experimental_apis = true
