# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

sources = files('rte_ring.c')
headers = files('rte_ring.h',
		'rte_ring_elem.h',
		'rte_ring_c11_mem.h',
		'rte_ring_generic.h',
		'rte_ring_hts.h',
		'rte_ring_hts_elem.h',
		'rte_ring_hts_generic.h',
		'rte_ring_peek.h',
		'rte_ring_rts.h',
		'rte_ring_rts_elem.h',
		'rte_ring_rts_generic.h')

# rte_ring_create_elem and rte_ring_get_memsize_elem are experimental
allow_experimental_apis = true
