# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2018-2019 Hisilicon Limited

sources = files('hns3_cmd.c',
	'hns3_dcb.c',
	'hns3_intr.c',
	'hns3_ethdev.c',
	'hns3_ethdev_vf.c',
	'hns3_fdir.c',
	'hns3_flow.c',
	'hns3_mbx.c',
	'hns3_regs.c',
	'hns3_rss.c',
	'hns3_rxtx.c',
	'hns3_stats.c',
	'hns3_mp.c')
deps += ['hash']

cflags += '-DALLOW_EXPERIMENTAL_API'
